--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# pnpm
+pnpm-lock.yaml
+
 # yarn v3
 .pnp.*
 .yarn/*
