updated: basic configs

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,7 @@
+BASE_URL=http://localhost:3000
+ENV=development
 PORT=3000
-JWT_SECRET=KsW8fdpSb2VFQ5LA4LsvWfU
+JWT_SECRET=long_secret
+
+# Database Configurations
+MONGO_URI=mongodb://localhost:27017/urlShortener
