--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "@koa/router": "^14.0.0",
+    "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "koa": "^3.0.1",
     "koa-bodyparser": "^4.4.1",
     "koa2-cors": "^2.0.6",
-    "mongoose": "^8.17.0"
+    "mongoose": "^8.17.0",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
@@ -26,6 +28,7 @@
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa__router": "^12.0.4",
     "@types/node": "^24.2.0",
+    "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
